--- a/web-developer.html
+++ b/web-developer.html
@@ -63,7 +63,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloagain-jobs.join.com/jobs/250448-web-developer'>Job @ helloain (Leonding): WEB DEVELOPER | JOIN</a></h5> 
+<h5><a href='https://helloagain-jobs.join.com/jobs/250448-web-developer'>Job @ helloain (Leonding): WEB DEVELOPER | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -89,7 +89,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/EASYRECRUE/743999692221480-web-developer'>EASYRECRUE Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EASYRECRUE/743999692221480-web-developer'>EASYRECRUE Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -105,7 +105,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/257004-web-developer-front-end'>Job @ talpasolutions (Essen): Web Developer (Front... | JOIN</a></h5> 
+<h5><a href='https://talpasolutions.join.com/jobs/257004-web-developer-front-end'>Job @ talpasolutions (Essen): Web Developer (Front... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -135,7 +135,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aicrowd.recruitee.com/o/web-application-developer-rails'>Web Application Developer (Rails) - AIcrowd</a></h5> 
+<h5><a href='https://aicrowd.recruitee.com/o/web-application-developer-rails'>Web Application Developer (Rails) - AIcrowd</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... At AIcrowd, we're looking to grow our team with a Web Application Developer (
 Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?...</p>
@@ -204,7 +204,7 @@ published: 19.07.2019). Apply now or check the other available jobs.</p>
 <p>2 days ago ... WebMD is searching for a Full Stack Developer. This person will collaborate with 
 a full team of technology professionals to take projects from design specs to?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ox9xafw7'>WebMD Careers - Full Stack Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/webmd/job/ox9xafw7'>WebMD Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Full Stack Developer. Job ID 2019-1565. Technology New York, New York. Apply
 . Description. Medscape, a division of WebMD, develops and hosts physician?...</p>
@@ -267,7 +267,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://flextrade.recruitee.com/o/web-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://flextrade.recruitee.com/o/web-developer'>
       Web Developer - FlexTrade
     </a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
@@ -298,7 +298,7 @@ Web Developer to join our busy and dynamic team based in our Dublin service?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://ltdglobal.applytojob.com/apply/LGaeCK7vYR/Web-Developer'>Web Developer - LTD Global - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://ltdglobal.applytojob.com/apply/LGaeCK7vYR/Web-Developer'>Web Developer - LTD Global - Career Page</a></h5> 
 <p><span class="badge badge-light">Berkeley, CA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -324,7 +324,7 @@ Web Developer to join our busy and dynamic team based in our Dublin service?...<
 und JavaScript? M?chtest du mithilfe der neusten Technologien und zusammen
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/StrategicInsight/743999690435131-front-end-web-developer'>Strategic Insight Front-End Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/StrategicInsight/743999690435131-front-end-web-developer'>Strategic Insight Front-End Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Oxford London</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -332,7 +332,7 @@ und JavaScript? M?chtest du mithilfe der neusten Technologien und zusammen
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://westphalia-datalab.join.com/jobs/251994-web-development-praktikum-w-m-d'>Job @ Westphalia DataLab (M?nster): Web Developme... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westphalia-datalab.join.com/jobs/251994-web-development-praktikum-w-m-d'>Job @ Westphalia DataLab (M?nster): Web Developme... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>9. Juli 2019 ... Westphalia DataLab GmbH has a job opening for Web Development Praktikum (
 w/m/d) in M?nster (published: 28.05.2019). Apply now or check the other?...</p>
@@ -357,7 +357,7 @@ w/m/d) in M?nster (published: 28.05.2019). Apply now or check the other?...</p>
 <p><span class="badge badge-light">Toronto Richmond Toronto</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/senior-web-developer-21628-bUeWt-QuSr6yuBaKkRyNN8'>Senior Web Developer-21628 #0187 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/senior-web-developer-21628-bUeWt-QuSr6yuBaKkRyNN8'>Senior Web Developer-21628 #0187 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -388,7 +388,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='http://levelset.applytojob.com/apply/Hf704hNGfp/Wordpress-PHP-Web-Developer-Marketing-Wizard'>Wordpress &amp; PHP Web Developer || Marketing Wizard - Levelset - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://levelset.applytojob.com/apply/Hf704hNGfp/Wordpress-PHP-Web-Developer-Marketing-Wizard'>Wordpress &amp; PHP Web Developer || Marketing Wizard - Levelset - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
